--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       background-image:url("http://tc.ffsky.net/images/2017/05/16/c962daac9b3a9baeb24c9a2c25f38b0f.jpg");
       background-repeat:no-repeat;}
     nav{
-        
+        background:#DEB887;
     }
     /*导航栏链接样式*/
   .mainlink{
