--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <a class="mainlink" href="http://www.haruhi.tv/" target="_blank"><img src="http://www.haruhi.tv/img/zozlogo.jpg"/>SOS团 凉宫春日的忧伤官方网站</a>
     <a class="mainlink" href="http://mv.avex.jp/ga/" target="_blank">GA艺术科美术生官方网站</a>
     <a class="mainlink" href="http://www.roame.net/" target="_blank">路游动漫图片壁纸网</a>
+    <a class="mainlink" href="https://tieba.baidu.com/p/4340531002?red_tag=3149068953" target="_blank">东方project壁纸</a>
     <!--漫画类-->
     <a class="mainlink" href="http://www.dm5.com/manhua-charlotte-sigemanhua-chaoyueqingchunba/" target="balnk">Charlottle四格漫画</a>
     <!--软件类-->
