--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
     <a class="mainlink" href="https://cn.codecombat.com/" target="_blank">编程游戏</a>
     <a class="mainlink" href="https://www.cngal.org/" target=""_blank>中文GalGame资源站</a>
     <a class="mainlink" href="https://itch.io/" target="_blank">itch.io-免费游戏下载、分享、上传</a>
+    
+    <!--游戏开发-->
+    <a href="http://gad.qq.com/article/detail/44453?sessionUserType=BFT.PARAMS.265140.TASKID&ADUIN=2439905184&ADSESSION=1528199191&ADTAG=CLIENT.QQ.5563_.0&ADPUBNO=26785" target="_blank">关于游戏数值策划你应该知道的几件事</a>
+    <a href="http://gad.qq.com/" target="_blank" ><img src="http://gad.qpic.cn/assets/v2/web/img/global/gad_logo_1.png"></a>
     <!--轻小说-->
     <a class="mainlink" href="http://book.suixw.com/" target="_blank">随想轻小说</a>
     <!--日本轻小说网站-->
