--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
     <a class="mainlink" href="http://www.dm5.com/manhua-charlotte-sigemanhua-chaoyueqingchunba/" target="balnk">Charlottle四格漫画</a>
     <!--软件类-->
     <a class="mainlink" href="https://s3.amazonaws.com/psiphon/web/1ief-w524-5l3c/zh/download.html" target="_blank">vpn</a>
+    
+    <!--实用工具-->
+    <a href="http://www.sioe.cn/yingyong/yanse-rgb-16/" target="_blank">RGB颜色值与十六进制颜色代码表<a>
     <!--游戏类-->
     <a class="mainlink" href="https://cn.codecombat.com/" target="_blank">编程游戏</a>
     <a class="mainlink" href="https://www.cngal.org/" target=""_blank>中文GalGame资源站</a>
