--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
               <a class="mainlink" href="http://www.roame.net/" target="_blank">路游动漫图片壁纸网</a>
               <a class="mainlink" href="https://tieba.baidu.com/p/4340531002?red_tag=3149068953" target="_blank">东方project壁纸</a>
     <!--国内外动画创作者的相关网站-->
-                     <!--国产--鱼肚白文化传媒-->
-                      <img style="width:204px;height:98px;" src="http://www.ydbanimation.com/header_footer/logo.png"/>
+                     <!--国产/鱼肚白文化传媒-->
+                      <img style="width:204px;height:18px;" src="http://www.ydbanimation.com/header_footer/logo.png"/>
                       <a href="http://www.ydbanimation.com/" target="_blank">鱼肚白文化传媒</a>
     <!--漫画类-->
     <a class="mainlink" href="http://www.dm5.com/manhua-charlotte-sigemanhua-chaoyueqingchunba/" target="balnk">Charlottle四格漫画</a>
