--- a/index.html
+++ b/index.html
@@ -450,4 +450,6 @@
              那么输入端为1。也就是说，输入端与输出端的信号是相反的。如果觉得文字理解不了，可以试试我的世界这款游戏，逻辑门中的特性和MC中的红石火把的特性是一样的。
       
     </div>
+    <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/243735837/?autostart=false" frameborder="0" allowfullscreen></iframe>
+
 </html>
