--- a/index.html
+++ b/index.html
@@ -288,13 +288,13 @@
     
     如果播放器播放不了 请选择IE兼容模式 视频地址<a href="https://www.bilibili.com/video/av17680937/" target="_blank">av17680937</a>
     <br/>
-    <a href="https://www.bilibili.com/video/av18058228/" target="_blank"><img id="kawayi" src="https://i2.hdslb.com/bfs/archive/5acb7ae048f412d291fe898cee65214a52de1a6c.jpg"/></a>
+    <a href="https://www.bilibili.com/video/av18058228/" target="_blank"><img id="kawayi" src="https://i2.fuimg.com/510372/8108bed70c691886.jpg"/></a>
     <br/>
     三分钟教你做Kawayi Bass
     <a href="http://www.kisssub.org/" target="_blank">爱恋动漫BT下载</a>
     <a href="http://www.gal123.com/" target="_blank">绅士导航</a>
     <br/>
-    <a href="https://www.bilibili.com/video/av15111628/" target="_blank">
+    <a href="https://www.bilibili.com/video/av15111628/" target="_blank"></a>
       <img class="acg" src="https://i0.hdslb.com/bfs/archive/0d37118011e987f7e6a7eb79be8c8bc279bacf10.jpg"/></a>动画同好会op官方mv
    <br/>
     <a href="http://www.acgdoge.net/archives/23804" target="_blank">小偷终末旅行，俄罗斯男子开装甲车去便利店偷走一瓶酒</a>
