--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     <a href="https://bangumi.bilibili.com/anime/6432?from=search&seid=7761475212822567032" target="_blank">《调教咖啡厅》</a>
     <img src="https://i0.hdslb.com/bfs/bangumi/f0043f638a4ce8307e0a299349d6d6beb4e7b97b.jpg_225x300.jpg"/>
     <a href="https://bangumi.bilibili.com/anime/184?from=search&seid=15477047233646136821" target="_blank">《No game,No life》</a>
-       <img src="https://i0.hdslb.com/bfs/bangumi/f7175cd20de509e2bfd43255c28cf4e24841480d.jpg_225x300.jpg"/>
+       <img src="http://i4.fuimg.com/510372/92eef8c89bdceec4.jpg"/>
     <a href="" target="_blank">《可塑性记忆》</a>
     <img src="https://i0.hdslb.com/bfs/bangumi/3e688cd89f778968bdf6f6d9ca6f3d20b76f04ea.jpg_225x300.jpg"/>
     
