--- a/index.html
+++ b/index.html
@@ -43,20 +43,6 @@
     .hide{
           display:inline-block;
     }
-    /*右上角音乐播放按钮样式*/
-    #bgm{
-        border-radius:90px;
-        width:100px;
-        position:fixed;
-        right:0px;
-        top:0px;
-        cursor:pointer;
-        animation:bgm 5s infinite;
-    }
-    /*右上角音乐播放按钮旋转动画*/
-    @keyframes bgm{
-      to{transform:rotate(360deg);}
-    }
   
     span{
         border:1px solid;
@@ -96,10 +82,6 @@
   <a href="http://lightmoon.pw/#/Blog/BlogList" target="_blank">JE谱曲资源站</a>
   <a href="http://www.dskmusic.com/" target="_blank">DSK Music</a>
   <font color="red"> 温馨提示：</font>要获得更好的网页体验，请使用Chorme内核的浏览器！ 此网页在设计时未考虑到IE浏览器和欧朋浏览器！
-  <!--右上角音乐播放按钮-->
-  <img id="bgm" onclick="bgm()" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1511099183032&di=60e0d77b29812bf48fa869ec1648fcae&imgtype=jpg&src=http%3A%2F%2Fimg4.imgtn.bdimg.com%2Fit%2Fu%3D3778900539%2C3996182491%26fm%3D214%26gp%3D0.jpg"/>
-
-
   <nav>
        <a class="mainlink">漫画</a>
        <a class="mainlink">软件</a>
@@ -135,7 +117,7 @@
     <a href="http://www.sioe.cn/yingyong/yanse-rgb-16/" target="_blank">RGB颜色值与十六进制颜色代码表<a>
     <!--游戏类-->
     <a class="mainlink" href="https://cn.codecombat.com/" target="_blank">编程游戏</a>
-    <a class="mainlink" href="https://www.cngal.org/" target=""_blank>中文GalGame资源站</a>
+    <a class="mainlink" href="https://www.cngal.org/" target="_blank">中文GalGame资源站</a>
     <a class="mainlink" href="https://itch.io/" target="_blank">itch.io-免费游戏下载、分享、上传</a>
     
     <!--游戏开发-->
@@ -177,7 +159,7 @@
   <a href="http://acg.178.com/201803/314486457588.html" target="_blank">可爱翻倍~「小木乃伊来我家」联动「Fun！Fun！FantasyTheater」~</a>
   </marqueen>
   <!--背景音乐-->
-  <audio id="backgroundmusic" src="http://link.hhtjim.com/163/496869523.mp3" controls="controls"></audio><!--背景音乐-->
+  <audio id="backgroundmusic" src="http://link.hhtjim.com/163/496869523.mp3" controls></audio><!--背景音乐-->
 <div style="background:pink;width:500px;">播放列表
   <ol>
 <li id="fallen star">fallen star</li>
@@ -408,7 +390,7 @@
     </style>
     <script>
       function summon(){
-               .dislplay=inline-block;
+               o.dislplay=inline-block;
       } </script>
     </body>
   <style>
