--- a/乐高.html
+++ b/乐高.html
@@ -7,7 +7,7 @@
    <body>
       <h1>乐高积木爱好者社区</h1>
     <select>
-      	<option>😭</option>
+      	<option>😭test</option>
       		<option>😊</option>
       		<option>😷</option>
        	<option>☺</option>
