--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
   <a class="mainlink" href="https://easypage.com/0N0K0R0C0T5W7F2H/tjepr4" target="_blank">ACG壁纸小站</a>
   <a href="http://lightmoon.pw/#/Blog/BlogList" target="_blank">JE谱曲资源站</a>
   <a href="http://www.dskmusic.com/" target="_blank">DSK Music</a>
-  <font color="red"> 温馨提示：</font>要获得更好的网页体验，请使用Chorme内核的浏览器！ 此网页在设计时未考虑到IE浏览器和欧朋浏览器！
-  <nav>
+  <font color="red"> 温馨提示：</font>
        <a class="mainlink">漫画</a>
        <a class="mainlink">软件</a>
        <a class="mainlink">动漫</a>
@@ -36,7 +35,7 @@
   <!--动漫类-->
               <a href="http://www.moe123.net/" target="_blank"><img src="http://www.moe123.net/favicon.ico"/>萌导航,你的二次元导航姬</a>
               <a class="mainlink" href="http://key.visualarts.gr.jp/angelbeats/index.html" target="_blank">key社 Angel Beats 官方网站</a>
-              <a class="mainlink" href="http://www.haruhi.tv/" target="_blank"><img src="http://www.haruhi.tv/img/zozlogo.jpg"/>SOS团 凉宫春日的忧伤官方网站</a>
+  <a class="mainlink" href="http://www.haruhi.tv/" target="_blank"><img id="sos" src="http://www.haruhi.tv/img/zozlogo.jpg"/>SOS团 凉宫春日的忧伤官方网站</a>
               <a class="mainlink" href="http://mv.avex.jp/ga/" target="_blank">GA艺术科美术生官方网站</a>
               <a class="mainlink" href="http://www.roame.net/" target="_blank">路游动漫图片壁纸网</a>
               <a class="mainlink" href="https://tieba.baidu.com/p/4340531002?red_tag=3149068953" target="_blank">东方project壁纸</a>
@@ -356,5 +355,5 @@
              那么输入端为1。也就是说，输入端与输出端的信号是相反的。如果觉得文字理解不了，可以试试我的世界这款游戏，逻辑门中的特性和MC中的红石火把的特性是一样的。
        </div>
     <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/243735837/?autostart=false" frameborder="0" allowfullscreen></iframe>
-	
-</html>
+	<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/20484154/?autostart=false" frameborder="0" allowfullscreen></iframe>
+	  </html>
