--- a/乐高.html
+++ b/乐高.html
@@ -5,12 +5,13 @@
     <title>乐高积木爱好者社区</title>
    </head>
    <body>
-      <h1>乐高积木爱好者社区</h1>
+      <h1 align="center">乐高积木爱好者社区</h1>
     <select>
       	<option>😭test</option>
       		<option>😊</option>
       		<option>😷</option>
        	<option>☺</option>
     </select>
+    <div>乐玩积木</div>
    </body>
 </html>
