--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8"><meta keywords="音乐,ACG">
-  <link rel="shortcut icon" href="https://avatars2.githubusercontent.com/u/29478722?s=400&u=9f622f7f31db7059fbbe8eba6c8571b5c61c7066&v=4"/><!--网页缩略图-->
-  <link rel="stylesheet" href="/css/test.css"/>
+  <meta charset="utf-8"/><meta keywords="音乐,ACG"/>
+  <link rel="stylesheet" href="css/test.css"/>
   <script src="/js/test.js"></script>
   <title>1288hh的个人小站</title>
+  
   </head><body>
   <h1 align="center">1288hh的个人小站</h1><!--标题居中-->
+   <a href="https://aidn.jp/nyancat/" target="_blank">
+        <!--彩虹猫动图↓-->
+        <img id="nay-cat" src="https://aidn.jp/daniwell/shared/img/nyancat.gif"/>
+        <!--彩虹猫结束-->
+        </a>
   <a class="mainlink">个人笔记</a>
  
   旧网站入口
@@ -66,7 +71,7 @@
     <a class="mainlink" href="http://www.360doc.com/content/15/0219/20/9060464_449471573.shtml" target="_blank">网易云音乐MP3网址外链转换</a>
     <a class="mainlink" href="http://ngnl.jp" target="_blank">No game No life-游戏人生官方网站</a>
     <a class="mainlink" href="http://www.geekfans.com/" target="_blank">极客迷</a>
-    </br>
+    <br/>
    <!--弹幕类-->
     <a class="mainlink" href="http://www.bilibili.com" target="_blank">哔哩哔哩</a>
     <a class="mainlink" href="http://www.acfun.tv/" target="_blank">AcFun</a>
@@ -159,8 +164,8 @@
     
     <img src="https://raw.githubusercontent.com/2439905184/io.images/master/animation/803ee7dc0e151ea3f634fe49e73d3b3fb93ca433.jpg_225x300.jpg"/>
      <br/>
-    <a href="https://bangumi.bilibili.com/anime/959?from=search&seid=5559284170557433515" target="_blank">《Angel Beats》</a>
-  </div><div id="suggest-game"><!--游戏推荐-->
+    <a href="https://bangumi.bilibili.com/anime/959?from=search&seid=5559284170557433515" target="_blank">《Angel Beats》></a>
+    <div id="suggest-game"><!--游戏推荐-->
       <a href="https://www.mojang.com/" target="_blank">我的世界</a>
       <a>机械迷城</a>涂鸦上帝——闪电
       <a>
@@ -233,22 +238,7 @@
       <p>开源免费音乐工作站软件：<a href="https://helioworkstation.com/" target="_blank">Heillo<img src="https://helioworkstation.com/favicon-32x32.png"/></a></p>
     </div>
     <div>
-      <a href="https://aidn.jp/nyancat/" target="_blank">
-        <!--彩虹猫动图↓-->
-        <img id="nay-cat" src="https://aidn.jp/daniwell/shared/img/nyancat.gif"/>
-        <style>
-          #nay-cat{
-            position:fixed;
-            top:0;
-            z-index:0;
-            animation:fly 20s infinite;}
-          @keyframes fly{
-            from{margin-left:0px;}
-            to{margin-left:800px;}}
-        </style>
-        <!--彩虹猫结束-->
-        </a>
-      <a href="https://zh.wikisource.org/wiki/Wikisource:%E9%A6%96%E9%A1%B5" target="_blank">维基文库</a>
+     <a href="https://zh.wikisource.org/wiki/Wikisource:%E9%A6%96%E9%A1%B5" target="_blank">维基文库</a>
       <a href="https://zh.wikibooks.org/wiki/Wikibooks:%E9%A6%96%E9%A1%B5" target="_blank">维基教科书</a></div>
     <div>
       <a href="http://mp.weixin.qq.com/s?__biz=MzA5MjA5MDEwNw==&mid=200620766&idx=3&sn=714925851b11bee130cd414fe089fdf5" targte="_blank">由于要准备新连载，美水镜将暂停连载漫画《幸运星》</a>
@@ -316,7 +306,6 @@
       function summon(){
                o.dislplay=inline-block;
       } </script>
-    </body>
   <style>
     .acg{
       width:300px;}
@@ -353,7 +342,7 @@
     CD4069-六非门逻辑电路使用教程：
                 CD4069一共有6个非门，用户可以选择全部使用或者部分使用。非门的作用是对电路信号做相反处理。如果非门的输入端为1，则输出端为0。如果输入端为0，
              那么输入端为1。也就是说，输入端与输出端的信号是相反的。如果觉得文字理解不了，可以试试我的世界这款游戏，逻辑门中的特性和MC中的红石火把的特性是一样的。
-       </div>
+  </div>
     <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/243735837/?autostart=false" frameborder="0" allowfullscreen></iframe>
-	<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/20484154/?autostart=false" frameborder="0" allowfullscreen></iframe>
+		<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/20484154/?autostart=false" frameborder="0" allowfullscreen></iframe></body>
 	  </html>
