--- a/new_index.html
+++ b/new_index.html
@@ -2,10 +2,11 @@
 <head>
 <meta charset="utf-8"/>
 </head>
-<body>
-<div>
+<body><!--设置我的背景图片-->
+<div id="me">
 	<!--头像-->
-	<img/>
+	<a href=""><<img src=""/></a>
+	<a>笔记</a>
 </div>
 
 <div></div>
