--- a/new_index.html
+++ b/new_index.html
@@ -16,11 +16,10 @@
 </div>
 	<audio id="audio" src="http://music.163.com/song/media/outer/url?id=30064291.mp3 " controls="controls"></audio>
 <div></div>
-	</body><script>
+	</body>
+	<script>
 	var bgm=document.getElementById("bgm")
-	bgm.onclick=bgm()
-	function bgm(){
-		document.getElementById("audio").play()
+	bgm.onclick=function(){	document.getElementById("audio").play()
 	}
 	</script>
 </html>
