--- a/new_index.html
+++ b/new_index.html
@@ -8,8 +8,8 @@
 		<!--设置我的背景图片-->
 		<div id="me">
 			<!--头像-->
-			<a href="">
-				<img src="f" alt="ssd" />
+			<a href="https://space.bilibili.com/26680057/#/">
+				<img src="https://avatars2.githubusercontent.com/u/29478722?s=400&u=9f622f7f31db7059fbbe8eba6c8571b5c61c7066&v=4" alt="ssd" />
 
 			</a>
 			<br />
