--- a/index.html
+++ b/index.html
@@ -345,4 +345,7 @@
   </div>
     <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/243735837/?autostart=false" frameborder="0" allowfullscreen></iframe>
 		<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/20484154/?autostart=false" frameborder="0" allowfullscreen></iframe></body>
-	  </html>
+	 <canvas id='live2d' width="280" height="250"></canvas>
+	    <script src="/live2D/live2d.js"></script>
+	    <script>loadlive2d("live2D", "/live2D/waifu-tips.json");</script>
+	    </html>
