--- a/canvas.html
+++ b/canvas.html
@@ -4,7 +4,7 @@
 <canvas id='canvas' width="700px" height="700px"></canvas>
 </body>
 <script>
-var c=document.getElementById(canvas)
+var c=document.getElementById('canvas')
 var pen=c.getContext('2d')
 var x=0;
 function draw()
