--- a/canvas.html
+++ b/canvas.html
@@ -2,6 +2,7 @@
 <head></head>
 <body>
 <canvas id='canvas' width="700px" height="700px"></canvas>
+    <button onclick="clear()"></button>
 </body>
 <script>
 var c=document.getElementById('canvas')
@@ -11,7 +12,7 @@ function draw()
 {
 pen.fillRect(x,0,50,50)
 x+=10
-if(x>700)
+if(x>500)
 {
 x=0
 }
