--- a/canvas.html
+++ b/canvas.html
@@ -2,18 +2,19 @@
 <head></head>
 <body>
 <canvas id='canvas' width="700px" height="700px"></canvas>
-    <button onclick="clear()"></button>
+    <button onclick="clear()">clear</button>
 </body>
 <script>
 var c=document.getElementById('canvas')
 var pen=c.getContext('2d')
-var x=0;
+x=0;
 function draw()
 {
 pen.fillRect(x,0,50,50)
-x+=10
+x+=50
 if(x>500)
 {
+pen.clearRect(0,0,400,400)
 x=0
 }
 }
