--- a/new_index.html
+++ b/new_index.html
@@ -24,7 +24,7 @@
 		<audio id="audio" src="http://music.163.com/song/media/outer/url?id=30064291.mp3 " controls="controls"></audio>
 		<div>
 			<p><a href="2439905184.github.io/index.html">旧主页</a></p>
-			<p><a>我的专栏</a></p><!--这里写bilibili专栏地址-->
+			<p><a href="https://space.bilibili.com/26680057/article">我的专栏</a></p><!--这里写bilibili专栏地址-->
 			<p><a href="">优秀github开源项目</a></p>
 		</div>
 		<script>
