--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="css/test.css"/>
   <script src="/js/test.js"></script>
   <title>1288hh的个人小站</title>
-  
+  <link rel="shortcut icon" href="https://avatars2.githubusercontent.com/u/29478722?s=400&u=9f622f7f31db7059fbbe8eba6c8571b5c61c7066&v=4">
   </head><body>
   <h1 align="center">1288hh的个人小站</h1><!--标题居中-->
    <a href="https://aidn.jp/nyancat/" target="_blank">
