--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     
     <!--实用工具-->
     <a href="http://www.sioe.cn/yingyong/yanse-rgb-16/" target="_blank">RGB颜色值与十六进制颜色代码表<a>
+	    <a href="http://www.dropitproject.com/" target="_blank">Drop It轻量级windows文件整理工具</a>
     <!--游戏类-->
     <a class="mainlink" href="https://cn.codecombat.com/" target="_blank">编程游戏</a>
     <a class="mainlink" href="https://www.cngal.org/" target="_blank">中文GalGame资源站</a>
