--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html>
 <head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-3043181823386015",
+    enable_page_level_ads: true
+  });
+</script>
   <meta charset="utf-8">
   <link rel="shortcut icon" href="https://avatars2.githubusercontent.com/u/29478722?s=400&u=9f622f7f31db7059fbbe8eba6c8571b5c61c7066&v=4"/><!--网页缩略图-->
   <link rel="stylesheet" href="/css/test.css"/>
@@ -190,3 +197,21 @@
   
   
 </html>
+:pointer;
+    }
+  </style>
+
+  <font style="cursor:pointer;">点击召唤吉祥物（测试中）</font>
+  <!--扫雷-->
+  <div id="saolei"></div>
+  <style>#saolei{
+    height:800px;
+    width:480px;
+    }</style>
+  <!--我的世界-->
+  <div>我的世界相关网站</div>
+  <a href="http://mcfuzhu.net/" target="_blank">MC服主网</a>
+  <a href="https://aternos.org/zh-TW/" target="_blank">我的世界免费服务器</a>
+  <div>好番推荐</div>
+  <a href="http://bangumi.bilibili.com/anime/413" tagret="_blank">变态王子与不笑猫</a>
+  <a hr
