--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
 <html>
 <head>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-3043181823386015",
-    enable_page_level_ads: true
-  });
-</script>
+<script data-ad-client="ca-pub-3043181823386015" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <meta charset="utf-8">
   <link rel="shortcut icon" href="https://avatars2.githubusercontent.com/u/29478722?s=400&u=9f622f7f31db7059fbbe8eba6c8571b5c61c7066&v=4"/><!--网页缩略图-->
   <link rel="stylesheet" href="/css/test.css"/>
