--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
 </head>
 <body>
-  <h1 align="center">1288hh的个人小站</h1><!--标题居中-->
-  <!-- 静态下无法使用xml动态性 -->
-  <!-- <a  href="_notes/dwsync.xml">个人笔记</a> -->
+  <h1 align="center">1288hh的个人小站</h1>
+  <audio id="audio" src="http://music.163.com/song/media/outer/url?id=30064291.mp3 " controls="controls"></audio>
+<div id="sakana-widget"></div>
   <h2>个人兴趣收集</h2>
   <table border="2px">
     <tr>
@@ -46,7 +46,7 @@
       <th>资源网</th>
       <td>  <a href="https://www.zhaogepu.com/" target="_blank">找歌谱网</a></td>
       <td>  <img src="https://www.moepro.cn/favicon.ico" alt="" srcset=""><a href="http://moe.005.tv/" target="_blank">萌娘资源站</a></td>
-      <td>   <img src="" alt="" srcset=""><a href="http://www.dskmusic.com/" target="_blank">DSK Music</a></td>
+      <td> <a href="http://www.dskmusic.com/" target="_blank">DSK Music</a></td>
       <td> <a href="http://www.roame.net/" target="_blank">路游动漫图片壁纸网</a> </td>
       <td> <img src="http://www.midishow.com/favicon.ico" alt="" srcset=""> <a href="http://www.midishow.com" target="_blank">midishow资源网站</a></td>
       <td>    <a href="http://www.kisssub.org/" target="_blank">爱恋动漫BT下载</a></td>
@@ -133,8 +133,7 @@
       <td><a href="http://">纪念碑谷2</a></td>
       <td><a>小鳄鱼爱洗澡</a></td>
       <td><a>植物大战僵尸2</a></td>
-      <img class="game" src="https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=1718249484,1805826979&fm=27&gp=0.jpg"/></a>
-      <td>     <a href="https://www.appinn.com/powder-game/">粉末游戏</a></td>
+      <td><a href="https://www.appinn.com/powder-game/">粉末游戏</a></td>
       <td><a href="https://cn.codecombat.com/" target="_blank">codecombat——玩游戏学编程</a></td>
     </tr>
     <tr>
@@ -174,8 +173,7 @@
   <li id="River">River-Axero</li>
     </ol>
   </div> -->
-  <br/>
-  <strong><font color="rgb(48, 128, 232)">此网页中如有链接失效也是可能的事 因为这些都是从网上收集来的</font></strong>
+  <strong>此网页中如有链接失效也是可能的事 因为这些都是从网上收集来的</strong>
   <!-- <div id="list">播放列表</div> -->
     <!--动漫op音乐推荐-->
     <!-- <div>
@@ -232,9 +230,10 @@
     <!-- <canvas id='live2d' width="280" height="250"></canvas>
 	    <script src="/live2D/live2d.js"></script>
 	    <script>loadlive2d("live2D", "/live2D/waifu-tips.json");</script> -->
+      <h2>我的世界技术研究</h2>
+      <a href="笔记/MineCraft/forge的事件系统.html">MC Forge事件系统</a>
+      <a href="笔记/MineCraft/MineCraftModDeveloperCenter.html">我的世界mod开发教程集合站</a>
 <!-- 石蒜挂件 -->
-     
-<div id="sakana-widget"></div>
 <script>
   function initSakanaWidget() {
     new SakanaWidget().mount('#sakana-widget');
@@ -249,6 +248,6 @@
     
 	    </html>
 <!-- 个人收藏夹 -->
-<ol>
+<!-- <ol>
   <li></li>
-</ol>
+</ol> -->
